# solaris-software

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Doxyfile  LICENSE.md  README.md  mainpage.dox  solaris.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-build-flash-local.sh  docker-build-flash.sh  docker-build.sh  docker-compose.yml  docker-flash-local.sh  docker-openocd-local.sh  setup-terminal.sh
.github/: Dockerfile.ci
.github/workflows/: build-solaris-code.yml  deploy-website.yml
archive/: .gitignore
archive/solaris-v0.1/components/pressure_sensor_driver/: CMakeLists.txt  bmp390.c
archive/solaris-v0.1/components/pressure_sensor_driver/include/: bmp390.h
archive/solaris-v0.1/main/: main.c
archive/solaris-v0.2/components/general/include/: macros.h
archive/solaris-v0.2/components/icm_driver/: CMakeLists.txt  icm20948.c
archive/solaris-v0.2/components/kalman/: CMakeLists.txt
archive/solaris-v0.2/main/: main.c
doc/cppcheck/: 0.html  1.html  10.html  11.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html  stats.html
docs/: software-architecture.md  system-architecture.md
scripts/: install-linux.sh  install-windows.ps1
solaris-v1/: sdkconfig  sonar-project.properties
solaris-v1/compiler/spp/: CMakeLists.txt
solaris-v1/compiler/spp_ports/: CMakeLists.txt
solaris-v1/components/datalogger_driver/: dataloggerSD.c
solaris-v1/components/datalogger_driver/include/: dataloggerSD.h
solaris-v1/components/general/: CMakeLists.txt  general.c  general.h  gpio_int.c  gpio_int.h  macros.h
solaris-v1/components/icm_driver/: icm20948.c
solaris-v1/components/icm_driver/include/: icm20948.h
solaris-v1/components/icm_driver/tests/: CMakeLists.txt  mock_common.h  test_dmp_init_sequence.c  test_dmp_memory_write.c  test_dmp_output_config.c  test_fifo_data_parsing.c  test_firmware_load.c  test_gyro_calibration_math.c  test_icm20948.c  test_power_management.c  test_register_bank_selection.c  test_spi_register_access.c
solaris-v1/components/icm_driver/tests/stubs/: esp_err.h  general.h  macros.h
solaris-v1/components/icm_driver/tests/stubs/driver/: spi_common.h  spi_master.h
solaris-v1/components/icm_driver/tests/stubs/spp/core/: returntypes.h  types.h
solaris-v1/components/icm_driver/tests/stubs/spp/hal/spi/: spi.h
solaris-v1/components/icm_driver/tests/stubs/spp/osal/: task.h
solaris-v1/components/icm_driver/tests/stubs/spp/services/logging/: spp_log.h
solaris-v1/components/kalmanFilterDriver/: CMakeLists.txt
solaris-v1/components/pressureSensorDriver/: bmp390.c
solaris-v1/components/pressureSensorDriver/include/: bmp390.h
solaris-v1/components/pressure_sensor_driver/: bmp390.c
solaris-v1/components/pressure_sensor_driver/include/: bmp390.h
solaris-v1/components/pressure_sensor_driver/test/: bmp390_test.c
solaris-v1/components/spp_port_wrapper/: CMakeLists.txt
solaris-v1/components/spp_wrapper/: CMakeLists.txt
solaris-v1/main/: CMakeLists.txt  bmpService.c  bmpService.h  bmp_service.c  main.c
solaris-v2/: CMakeLists.txt  sonar-project.properties
solaris-v2/compiler/spp/: CMakeLists.txt
solaris-v2/compiler/spp_ports/: CMakeLists.txt
solaris-v2/main/: CMakeLists.txt  init.c  init.h  main.c
website/: Makefile  README.md
website/html/: index.html
website/output/: index.html  style.css
website/src/: index.md
website/template/: footer.html  header.html
